// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/basic/drawer/demo/basic-right.md correctly 1`] = `
LoadedCheerio {
  "0": <button
    class="dcloud-btn dcloud-btn-primary"
    type="button"
  >
    <span>
      Open
    </span>
  </button>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/drawer/demo/config-provider.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="site-drawer-render-in-current-wrapper"
  >
    <button
      class="dcloud-btn dcloud-btn-primary"
      type="button"
    >
      <span>
        Open
      </span>
    </button>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/drawer/demo/extra.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-space dcloud-space-horizontal dcloud-space-align-center"
  >
    <div
      class="dcloud-space-item"
      style="margin-right:8px"
    >
      <div
        class="dcloud-radio-group dcloud-radio-group-outline"
      >
        <label
          class="dcloud-radio-wrapper"
        >
          <span
            class="dcloud-radio"
          >
            <input
              class="dcloud-radio-input"
              type="radio"
              value="top"
            />
            <span
              class="dcloud-radio-inner"
            />
          </span>
          <span>
            top
          </span>
        </label>
        <label
          class="dcloud-radio-wrapper dcloud-radio-wrapper-checked"
        >
          <span
            class="dcloud-radio dcloud-radio-checked"
          >
            <input
              checked=""
              class="dcloud-radio-input"
              type="radio"
              value="right"
            />
            <span
              class="dcloud-radio-inner"
            />
          </span>
          <span>
            right
          </span>
        </label>
        <label
          class="dcloud-radio-wrapper"
        >
          <span
            class="dcloud-radio"
          >
            <input
              class="dcloud-radio-input"
              type="radio"
              value="bottom"
            />
            <span
              class="dcloud-radio-inner"
            />
          </span>
          <span>
            bottom
          </span>
        </label>
        <label
          class="dcloud-radio-wrapper"
        >
          <span
            class="dcloud-radio"
          >
            <input
              class="dcloud-radio-input"
              type="radio"
              value="left"
            />
            <span
              class="dcloud-radio-inner"
            />
          </span>
          <span>
            left
          </span>
        </label>
      </div>
    </div>
    <div
      class="dcloud-space-item"
    >
      <button
        class="dcloud-btn dcloud-btn-primary"
        type="button"
      >
        <span>
          Open
        </span>
      </button>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/drawer/demo/form-in-drawer.md correctly 1`] = `
LoadedCheerio {
  "0": <button
    class="dcloud-btn dcloud-btn-primary"
    type="button"
  >
    <span
      aria-label="plus"
      class="anticon anticon-plus"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="plus"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <defs>
          <style />
        </defs>
        <path
          d="M482 152h60q8 0 8 8v704q0 8-8 8h-60q-8 0-8-8V160q0-8 8-8z"
        />
        <path
          d="M176 474h672q8 0 8 8v60q0 8-8 8H176q-8 0-8-8v-60q0-8 8-8z"
        />
      </svg>
    </span>
    <span>
      New account
    </span>
  </button>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/drawer/demo/multi-level-drawer.md correctly 1`] = `
LoadedCheerio {
  "0": <button
    class="dcloud-btn dcloud-btn-primary"
    type="button"
  >
    <span>
      Open drawer
    </span>
  </button>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/drawer/demo/no-mask.md correctly 1`] = `
LoadedCheerio {
  "0": <button
    class="dcloud-btn dcloud-btn-primary"
    type="button"
  >
    <span>
      Open
    </span>
  </button>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/drawer/demo/placement.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-space dcloud-space-horizontal dcloud-space-align-center"
  >
    <div
      class="dcloud-space-item"
      style="margin-right:8px"
    >
      <div
        class="dcloud-radio-group dcloud-radio-group-outline"
      >
        <label
          class="dcloud-radio-wrapper"
        >
          <span
            class="dcloud-radio"
          >
            <input
              class="dcloud-radio-input"
              type="radio"
              value="top"
            />
            <span
              class="dcloud-radio-inner"
            />
          </span>
          <span>
            top
          </span>
        </label>
        <label
          class="dcloud-radio-wrapper"
        >
          <span
            class="dcloud-radio"
          >
            <input
              class="dcloud-radio-input"
              type="radio"
              value="right"
            />
            <span
              class="dcloud-radio-inner"
            />
          </span>
          <span>
            right
          </span>
        </label>
        <label
          class="dcloud-radio-wrapper"
        >
          <span
            class="dcloud-radio"
          >
            <input
              class="dcloud-radio-input"
              type="radio"
              value="bottom"
            />
            <span
              class="dcloud-radio-inner"
            />
          </span>
          <span>
            bottom
          </span>
        </label>
        <label
          class="dcloud-radio-wrapper dcloud-radio-wrapper-checked"
        >
          <span
            class="dcloud-radio dcloud-radio-checked"
          >
            <input
              checked=""
              class="dcloud-radio-input"
              type="radio"
              value="left"
            />
            <span
              class="dcloud-radio-inner"
            />
          </span>
          <span>
            left
          </span>
        </label>
      </div>
    </div>
    <div
      class="dcloud-space-item"
    >
      <button
        class="dcloud-btn dcloud-btn-primary"
        type="button"
      >
        <span>
          Open
        </span>
      </button>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/drawer/demo/render-in-current.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="site-drawer-render-in-current-wrapper"
  >
    Render in this
    <div
      style="margin-top:16px"
    >
      <button
        class="dcloud-btn dcloud-btn-primary"
        type="button"
      >
        <span>
          Open
        </span>
      </button>
    </div>
    <div
      class=""
    >
      <div
        class="dcloud-drawer dcloud-drawer-right"
        style="position:absolute"
        tabindex="-1"
      >
        <div
          class="dcloud-drawer-mask"
        />
        <div
          class="dcloud-drawer-content-wrapper"
          style="transform:translateX(100%);-ms-transform:translateX(100%);width:378px"
        >
          <div
            class="dcloud-drawer-content"
          >
            <div
              class="dcloud-drawer-wrapper-body"
            >
              <div
                class="dcloud-drawer-header"
              >
                <div
                  class="dcloud-drawer-header-title"
                >
                  <div
                    class="dcloud-drawer-title"
                  >
                    Basic Drawer
                  </div>
                </div>
              </div>
              <div
                class="dcloud-drawer-body"
              >
                <p>
                  Some contents...
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/drawer/demo/size.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-space dcloud-space-horizontal dcloud-space-align-center"
  >
    <div
      class="dcloud-space-item"
      style="margin-right:8px"
    >
      <button
        class="dcloud-btn dcloud-btn-primary"
        type="button"
      >
        <span>
          Open Default Size (378px)
        </span>
      </button>
    </div>
    <div
      class="dcloud-space-item"
    >
      <button
        class="dcloud-btn dcloud-btn-primary"
        type="button"
      >
        <span>
          Open Large Size (736px)
        </span>
      </button>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/drawer/demo/user-profile.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-list dcloud-list-split dcloud-list-bordered"
  >
    <div
      class="dcloud-spin-nested-loading"
    >
      <div
        class="dcloud-spin-container"
      >
        <ul
          class="dcloud-list-items"
        >
          <li
            class="dcloud-list-item"
          >
            <div
              class="dcloud-list-item-meta"
            >
              <div
                class="dcloud-list-item-meta-avatar"
              >
                <span
                  class="dcloud-avatar dcloud-avatar-circle dcloud-avatar-image"
                >
                  <img
                    src="https://gw.alipayobjects.com/zos/rmsportal/BiazfanxmamNRoxxVxka.png"
                  />
                </span>
              </div>
              <div
                class="dcloud-list-item-meta-content"
              >
                <h4
                  class="dcloud-list-item-meta-title"
                >
                  <a
                    href="https://ant.design/index-cn"
                  >
                    Lily
                  </a>
                </h4>
                <div
                  class="dcloud-list-item-meta-description"
                >
                  Progresser XTech
                </div>
              </div>
            </div>
            <ul
              class="dcloud-list-item-action"
            >
              <li>
                <a>
                  View Profile
                </a>
              </li>
            </ul>
          </li>
          <li
            class="dcloud-list-item"
          >
            <div
              class="dcloud-list-item-meta"
            >
              <div
                class="dcloud-list-item-meta-avatar"
              >
                <span
                  class="dcloud-avatar dcloud-avatar-circle dcloud-avatar-image"
                >
                  <img
                    src="https://gw.alipayobjects.com/zos/rmsportal/BiazfanxmamNRoxxVxka.png"
                  />
                </span>
              </div>
              <div
                class="dcloud-list-item-meta-content"
              >
                <h4
                  class="dcloud-list-item-meta-title"
                >
                  <a
                    href="https://ant.design/index-cn"
                  >
                    Lily
                  </a>
                </h4>
                <div
                  class="dcloud-list-item-meta-description"
                >
                  Progresser XTech
                </div>
              </div>
            </div>
            <ul
              class="dcloud-list-item-action"
            >
              <li>
                <a>
                  View Profile
                </a>
              </li>
            </ul>
          </li>
        </ul>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;
